# 3d-game-of-life

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
include/app/: app.h  input.h
include/core/: camera.h  gameLogic.h  simulation.h
include/model/: torus.h
include/render/: renderer2d.h  renderer3d.h
include/ui/: toolbar.h
include/utils/: shaderUtils.h
shaders/: shader2d.frag  shader2d.vert  shader3d.frag  shader3d.vert
src/: main.cpp
src/app/: app.cpp  input.cpp
src/core/: camera.cpp  gameLogic.cpp  simulation.cpp
src/model/: torus.cpp
src/render/: renderer2d.cpp  renderer3d.cpp
src/ui/: toolbar.cpp
src/utils/: shaderUtils.cpp
